<resources>
    <string name="app_name">MSQ</string>
    <string name="something_went_wrong">Something went wrong. Try Later</string>
    <string name="facebook_app_id" translatable="false">515209462936335</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb515209462936335</string>
    <string name="facebook_client_token" translatable="false">c95031c3a368fab0d0648680b71c7e5e</string>
    <string name="your_web_client_id" translatable="false">42492129043-qj38j6bormgpkqqpllij0tue26349nnk.apps.googleusercontent.com</string>
    <string name="ms_q_artisans">MS Q Artisans</string>
    <string name="serve_your_pleasure">We serve at your pleasure</string>
    <string name="already_a_user"><u>Already a user?</u></string>
    <string name="create_account">Create Account</string>
    <string name="checkout">Check out</string>
    <string name="booking_cline_s"><b>Client:</b> %s</string>
    <string name="booking_address_s"><b>Address:</b> %s</string>
    <string name="booking_start_s"><b>Start:</b> %s</string>
    <string name="booking_employee_s"><b>Employee #:</b> %s</string>
    <string name="booking_tracking_s"><b>Tracking #</b> <font color="#0C95FF">%s</font></string>
    <string name="terms_conditions"><u>terms &amp; conditions</u></string>
    <string name="terms_conditions_caps">Terms &amp; Conditions</string>
    <string name="privacy_policy">Privacy &amp; Policy</string>
    <string name="merchant_privacy_policy">Merchant Privacy &amp; Policy</string>
    <string name="upload_photos"><u>Upload Photos</u></string>
    <string name="after"><u>After</u></string>
    <string name="before"><u>Before</u></string>
    <string name="change">Change</string>
    <string name="select_one">Select One</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="cancel">Cancel</string>
    <string name="are_you_sure_all_costs_have_been_settled_with_the_user">Are you sure all costs have been settled with the user?</string>
    <string name="yes_amount_settled">Yes, Amount Settled</string>
    <string name="return_">RETURN</string>
    <string name="service_providers">Service Providers</string>
    <string name="add_new_card">Add New Card</string>
    <string name="name_on_the_card">Name on the Card</string>
    <string name="card_number">Card Number</string>
    <string name="expiration">Expiration</string>
    <string name="cvv_code">CVV Code</string>
    <string name="submit">Submit</string>
    <string name="bookings">Bookings</string>
    <string name="no_booking_found">No Booking Found</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="change_password">Change Password</string>
    <string name="current_password">Current Password</string>
    <string name="need_a_help">Need a help?</string>
    <string name="payment_method">Payment Method</string>
    <string name="pay_after_service">Pay after Service</string>
    <string name="credit_debit_card">Credit/Debit Card</string>
    <string name="place_order">Place Order</string>
    <string name="completed">Completed</string>
    <string name="help">Help</string>
    <string name="settle_fees">Settle Fees</string>
    <string name="thank_you_for_your_application">Thank you for your application!</string>
    <string name="confirmation">Confirmation</string>
    <string name="confirmed_request">Confirmed Request !!!</string>
    <string name="our_customer_service_will_ncontact_you_within_2_business_ndays_for_the_status_of_your_application">Our Customer service will\ncontact you within 2 business\ndays for the status of your application.</string>
    <string name="connect_account">Connect Account</string>
    <string name="cash_to_collect">Cash to collect</string>
    <string name="have_you_contacted_the_client">Have you contacted the client?</string>
    <string name="employee_survey">Employee Survey</string>
    <string name="_1_tell_us_something_interesting_about_you">1. Tell us something interesting about you?</string>
    <string name="_2_how_did_you_hear_about_this_app">2. How did you hear about this app?</string>
    <string name="login">Login</string>
    <string name="book_service">Book Service</string>
    <string name="current">Current</string>
    <string name="cancelled">Cancelled</string>
    <string name="my_purchase">My Purchase</string>
    <string name="total_order">Total Order</string>
    <string name="language">Language</string>
    <string name="location">Location</string>
    <string name="search">Search</string>
    <string name="start_service_now">Start Service Now</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password_">Forgot Password?</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="log_in">Log In</string>
    <string name="don_t_have_any_account">Don\'t have any account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="give_user_reviews">Give user reviews</string>
    <string name="give_provider_reviews">Give provider reviews</string>
    <string name="select_category">Select Category</string>
    <string name="proof_of_service">Proof of service</string>
    <string name="add_some_photos_for_review_to_get_best_quotes">Add some photos for review to get best quotes.</string>
    <string name="complete">Complete</string>
    <string name="bank_card_information">Bank Card Information</string>
    <string name="home_address">Home Address</string>
    <string name="emergency_contact">Emergency Contact</string>
    <string name="job_hr">Job/Hr</string>
    <string name="feedback_to_artisans">Feedback to ARTISANS</string>
    <string name="at_rest">At Rest</string>
    <string name="on_duty">On Duty</string>
    <string name="your_request_has_been_approved">Your request has been approved</string>
    <string name="your_request_has_been_declined">Your request has been declined</string>
    <string name="reviews_amp_ratings"><![CDATA[Reviews & Ratings]]></string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="notifications">Notifications</string>
    <string name="support">Support</string>
    <string name="logout">Logout</string>
    <string name="services">SERVICES</string>
    <string name="top_up_pay">Top up Pay</string>
    <string name="select_a_top_up_value">Select a Top-up value</string>
    <string name="summary">Summary</string>
    <string name="payment">Payment</string>
    <string name="more_information">More information</string>
    <string name="on_the_way">On the Way</string>
    <string name="travelling">Travelling</string>
    <string name="place_service">Place Service</string>
    <string name="wallet">Wallet</string>
    <string name="transfer">Transfer</string>
    <string name="top_up">Top Up</string>
    <string name="request">Request</string>
    <string name="available_balance">Available Balance</string>
    <string name="deposit">Deposit</string>
    <string name="under_review">Under Review</string>
    <string name="cashout">Cashout</string>
    <string name="balance_details">Balance Details</string>
    <string name="remove_card">Remove card</string>
    <string name="welcome">Welcome</string>
    <string name="get_started">Get Started</string>
    <string name="or">or</string>
    <string name="customer">Customer</string>
    <string name="artisans">Artisans</string>
    <string name="ok">Ok</string>
    <string name="full_name">Full Name</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="birth_date">Birth Date</string>
    <string name="picture_selfie">Picture (selfie)</string>
    <string name="nbi_clearance_upload_file">NBI Clearance (upload file)</string>
    <string name="primary_id_upload_file">Primary ID (upload file)</string>
    <string name="i_accept_agree_to_the">I accept/agree to the</string>
    <string name="plz_select_dob">Please Select Date of Birth</string>
    <string name="hi">Hi</string>
    <string name="complete_setup">Complete setup</string>
    <string name="orders">ORDERS</string>
    <string name="pending">Pending</string>
    <string name="ongoing">On-going</string>
    <string name="rejected">Rejected</string>
    <string name="purchase_details">Purchase Details</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="click_to_track_request">Click to track Request</string>
    <string name="do_payment">Do Payment</string>
    <string name="your_employee_is_arriving_soon">your employee is arriving soon</string>
    <string name="your_request_has_been_log">your request has been log</string>
    <string name="home_service_chat">Home Service CHAT</string>
    <string name="book_a_service_now">Book a service now</string>
    <string name="available_one_click">Available @ one click</string>
    <string name="date_amp_time"><![CDATA[Date & Time]]></string>
    <string name="order_amount">Order Amount</string>
    <string name="plz_select_date">Please select a date</string>
    <string name="end_time_must_be_greater_then_start_time">End time must be greater than start time</string>
    <string name="update_profile">Update Profile</string>
    <string name="enter_current_pass">Please Enter Your Current Password</string>
    <string name="enter_new_pass">Please Enter New Password</string>
    <string name="enter_confirm_pass">Please Enter Confirm Password</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="order_id">Order ID</string>
    <string name="total_quoted_amount">Total quoted amount</string>
    <string name="payable_by_customer">Payable by Customer</string>
    <string name="payable_by_customer_n_nalready_paid_n_norder_rewards">Payable by Customer\n\nAlready paid\n\nOrder Rewards</string>
    <string name="balance">Balance</string>
    <string name="service_subtotal">Service Subtotal</string>
    <string name="order_total">Order Total</string>
    <string name="contact_service_management">Chat Service Management</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="postal_code">Postal Code</string>
    <string name="total_amount">Total amount</string>
    <string name="show_details">show details</string>
    <string name="order_contact">Order Contact:</string>
    <string name="plz_select_before_image">Please select before image</string>
    <string name="plz_select_after_image">Please select after image</string>
    <string name="type_a_message">Type a message...</string>
    <string name="plz_enter_review">Please enter review!</string>
    <string name="out_of_5">Out of 5</string>
    <string name="logged_in_as">Logged in as</string>
    <string name="version">Version</string>
    <string name="order_notifications">Order Notifications</string>
    <string name="enter_specify_other_app_name">Enter specify other app name!</string>
    <string name="enter_something_intresting_about_you">Enter something interesting about you!</string>
    <string name="str_video_initial_time" translatable="false">00:00</string>
    <string name="picker_bottom_message_with_video" translatable="false">Tap for photo</string>
    <string name="images_selected" translatable="false">%s Selected</string>
    <string name="tap_to_select" translatable="false">Tap to Select</string>
</resources>