<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/_12sdp"
    android:background="@drawable/round_bg_less_more"
    android:backgroundTint="@color/orange"
    tools:context=".code.auth.SplashFragment">

    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:gravity="start"
        android:text="@string/are_you_sure_all_costs_have_been_settled_with_the_user"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold"
        android:fontFamily="@font/helvetica"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/btnYes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_24sdp"
        android:layout_marginEnd="@dimen/_24sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:background="@drawable/round_bg"

        android:fontFamily="@font/aceh"
        android:backgroundTint="@color/sky_blue_dark"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:text="@string/yes_amount_settled"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMessage" />

    <TextView
        android:id="@+id/btnReturn"
        android:layout_width="wrap_content"
        android:fontFamily="@font/aceh"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:gravity="start"
        android:text="@string/return_"
        android:textAllCaps="true"
        android:padding="@dimen/_5sdp"
        android:textColor="@color/white"
        android:textSize="@dimen/_13ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnYes" />


</androidx.constraintlayout.widget.ConstraintLayout>