<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/_4sdp"
    android:layout_marginTop="@dimen/_12sdp"
    android:layout_marginEnd="@dimen/_4sdp"
    android:backgroundTint="@color/white"
    android:background="@drawable/rounded_white_bg_black_border">

    <TextView
        android:id="@+id/lblService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:fontFamily="@font/aceh"
        android:text="Service"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintBottom_toTopOf="@+id/ivUser"
        app:layout_constraintEnd_toEndOf="@+id/ivUser"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/ivUser"
        app:layout_constraintTop_toTopOf="parent" />

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/ivUser"
        android:layout_width="@dimen/_45sdp"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:scaleType="centerCrop"
        android:src="@drawable/app_logo"
        app:riv_corner_radius="@dimen/_25sdp"
        app:layout_constraintBottom_toTopOf="@+id/tvServiceName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblService" />

    <TextView
        android:id="@+id/tvServiceName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aceh"
        android:maxWidth="@dimen/_80sdp"
        android:text="3 Services"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/_9ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/ivUser"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/ivUser"
        app:layout_constraintTop_toBottomOf="@+id/ivUser" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivUser"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/llORDERS"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingBottom="@dimen/_2sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivUser"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_4sdp"
                android:fontFamily="@font/aceh"
                android:text="September 15, Saturday"
                android:textColor="@color/red"
                android:textSize="@dimen/_11ssp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvClient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_4sdp"
                android:layout_marginTop="@dimen/_2sdp"
                android:fontFamily="@font/aceh"
                android:singleLine="true"
                android:text="@string/booking_cline_s"
                android:textColor="@color/black"
                android:textSize="@dimen/_10ssp" />

            <TextView
                android:id="@+id/tvAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_4sdp"
                android:fontFamily="@font/aceh"
                android:singleLine="true"
                android:text="@string/booking_address_s"
                android:textColor="@color/black"
                android:textSize="@dimen/_10ssp" />

            <TextView
                android:id="@+id/tvStartTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_4sdp"
                android:fontFamily="@font/aceh"
                android:singleLine="true"
                android:text="@string/booking_start_s"
                android:textColor="@color/black"
                android:textSize="@dimen/_10ssp" />

            <TextView
                android:id="@+id/tvEmployeeID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_4sdp"
                android:fontFamily="@font/aceh"
                android:singleLine="true"
                android:text="@string/booking_employee_s"
                android:textColor="@color/black"
                android:textSize="@dimen/_10ssp" />

            <TextView
                android:id="@+id/tvTrackingNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_4sdp"
                android:fontFamily="@font/aceh"
                android:singleLine="true"
                android:text="@string/booking_tracking_s"
                android:textColor="@color/black"
                android:textSize="@dimen/_10ssp" />


        </LinearLayout>

        <TextView
            android:id="@+id/tvDoPayment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/_4sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:background="@drawable/round_bg_less"
            android:backgroundTint="@color/orange_mid"
            android:textStyle="bold"
            android:fontFamily="@font/aceh"
            android:padding="@dimen/_4sdp"
            android:singleLine="true"
            android:text="@string/do_payment"
            android:textColor="@color/white"
            android:textSize="@dimen/_10ssp" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>