<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".code.auth.SplashFragment">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/screen_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_50sdp"
                android:scaleType="centerCrop"
                android:src="@drawable/app_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvMSQ"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:text="@string/ms_q_artisans"
                android:textColor="@color/black"
                android:fontFamily="@font/aceh"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivLogo" />

            <TextView
                android:id="@+id/tvTagLine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/serve_your_pleasure"
                android:fontFamily="@font/aceh"
                android:textColor="@color/black"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvMSQ" />

            <TextView
                android:id="@+id/lblSignin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/change_password"
                android:textColor="@color/navy_blue"
                android:fontFamily="@font/aceh"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTagLine" />


            <EditText
                android:id="@+id/edtPassword_c"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:backgroundTint="@color/orange_mid"
                android:drawableStart="@drawable/ic_key"
                android:drawablePadding="@dimen/_10sdp"
                android:hint="@string/current_password"
                android:inputType="textPassword"
                android:paddingStart="@dimen/_10sdp"
                android:paddingTop="@dimen/_10sdp"
                android:fontFamily="@font/aceh"
                android:paddingEnd="@dimen/_10sdp"
                android:paddingBottom="@dimen/_12sdp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/hint_grey"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lblSignin" />

            <EditText
                android:id="@+id/edtPassword_n"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:backgroundTint="@color/orange_mid"
                android:drawableStart="@drawable/ic_key"
                android:drawablePadding="@dimen/_10sdp"
                android:fontFamily="@font/aceh"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                android:paddingStart="@dimen/_10sdp"
                android:paddingTop="@dimen/_10sdp"
                android:paddingEnd="@dimen/_20sdp"
                android:paddingBottom="@dimen/_12sdp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/hint_grey"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtPassword_c" />

            <EditText
                android:id="@+id/edtPassword_nc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:fontFamily="@font/aceh"
                android:backgroundTint="@color/orange_mid"
                android:drawableStart="@drawable/ic_key"
                android:drawablePadding="@dimen/_10sdp"
                android:hint="@string/confirm_new_password"
                android:inputType="textPassword"
                android:paddingStart="@dimen/_10sdp"
                android:paddingTop="@dimen/_10sdp"
                android:paddingEnd="@dimen/_20sdp"
                android:paddingBottom="@dimen/_12sdp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/hint_grey"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtPassword_n" />

            <TextView
                android:id="@+id/btnChange"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_24sdp"
                android:layout_marginTop="@dimen/_40sdp"
                android:layout_marginEnd="@dimen/_24sdp"
                android:layout_marginBottom="@dimen/_24sdp"
                android:background="@drawable/round_bg"
                android:backgroundTint="@color/sky_blue"
                android:padding="@dimen/_10sdp"
                android:text="@string/change"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"
                android:fontFamily="@font/aceh"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtPassword_nc" />



        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>